--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
   <head>
-    <title>Hi</title>
+    <title>EgeSuperMine</title>
   </head>
+
+  <style>
+    h1 {
+        font-family:'Segoe UI'
+    }
+  </style>
 
   <body>
     <h1>:3</h1>
