--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <style>
     h1 {
-        font-family:'Segoe UI'
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
     }
   </style>
 
