--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
     <title>EgeSuperMine</title>
   </head>
 
-  <style>
-    h1 {
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-    }
-  </style>
-
   <body>
-    <h1>:3</h1>
+    <h>YOU HAVE FOUND THE SECRET! DM EGESUPERMINE THE WORD "IMFIRSTTOVISITTHISWEBSITE" FOR A HUGE REWARD!!! BE QUICK, BEFORE ANYONE ELSE REDEEMS THIS EASTER EGG.</h>
   </body>
 </html>
