--- a/index.html
+++ b/index.html
@@ -3,7 +3,70 @@
     <title>EgeSuperMine</title>
   </head>
 
+  <style>
+    h1 {
+      font-family: "Comic Sans MS";
+      color: lime;
+      font-size: 6em;
+      margin-bottom: 0;
+    }
+
+    h2 {
+      font-family: "Comic Sans MS";
+      color: green;
+      font-size: 1.5em;
+      margin-top: 0;
+    }
+
+    h3 {
+      font-family: "Comic Sans MS";
+      color: green;
+      font-size: 3em;
+      margin-bottom: 0;
+    }
+
+    a h2 {
+      color: lime;
+      text-decoration: underline;
+      text-decoration-color: lime;
+    }
+
+    a h2:hover {
+      color: green;
+      text-decoration-color: green;
+      cursor: pointer;
+    }
+  </style>
+
   <body>
-    <h>YOU HAVE FOUND THE SECRET! DM EGESUPERMINE THE WORD "IMFIRSTTOVISITTHISWEBSITE" FOR A HUGE REWARD!!! BE QUICK, BEFORE ANYONE ELSE REDEEMS THIS EASTER EGG.</h>
+    <h1>EgeSuperMine</h1>
+    <h2>Oh hey there! I'm some random turkish C# Developer that's trying to make a game without a game engine! 
+      (I use Visual Studio WPF to make games.)</h2>
+    <h2>By the way, i'm the creator of EgeSuperMine the Cube or EgeSuperCube for short.</h2>
+    <div></div>
+    <h3>Here are stuff i've made:</h3>
+    <a href="https://GitHub.com/EgeSuperMine/Raise_an_EgeSuperMine" target="_blank">
+      <h2>Raise an EgeSuperMine (BETA 1.1.1)</h2>
+    </a>
+
+    <a href="https://GitHub.com/EgeSuperMine/Pet-EgeSuperMine" target="_blank">
+      <h2>Pet EgeSuperMine (1.7)</h2>
+    </a>
+
+    <a href="https://GitHub.com/EgeSuperMine/EgeSupX" target="_blank">
+      <h2>EgeSupX (1.1.2)</h2>
+    </a>
+
+    <a href="https://GitHub.com/EgeSuperMine/ESMs_RPG" target="_blank">
+      <h2>EgeSuperMine's RPG (In Development)</h2>
+    </a>
+  
+    <img
+src="https://raw.githubusercontent.com/EgeSuperMine/Raise_an_EgeSuperMine.Discord/main/EgeSuperMine1024x_.png"
+    width="512" height="512">
+
+    <footer>
+      <h>&copy; 2024 EgeSuperMine</h>
+    </footer>
   </body>
 </html>
