--- a/index.html
+++ b/index.html
@@ -1,72 +1,345 @@
-<html>
-  <head>
-    <title>EgeSuperMine</title>
-  </head>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EgeSuperMine</title>
+  <link rel="stylesheet" href="css/styles.css">
   <style>
-    h1 {
-      font-family: "Comic Sans MS";
-      color: lime;
-      font-size: 6em;
-      margin-bottom: 0;
+    /* Global Styles */
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      color: #f5f5f5;
+      background-color: #1a1a1a;
     }
 
-    h2 {
-      font-family: "Comic Sans MS";
-      color: green;
-      font-size: 1.5em;
-      margin-top: 0;
+
+    /* Hero Section */
+    .hero {
+      background: url('images/your-image.png') no-repeat center center/cover;
+      height: 60vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      text-align: center;
+      position: relative;
     }
 
-    h3 {
-      font-family: "Comic Sans MS";
-      color: green;
-      font-size: 3em;
-      margin-bottom: 0;
+    .hero-text {
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 2rem;
+      border-radius: 10px;
     }
 
-    a h2 {
-      color: lime;
-      text-decoration: underline;
-      text-decoration-color: lime;
+    .hero-text h2 {
+      margin: 0;
+      font-size: 2.5rem;
     }
 
-    a h2:hover {
-      color: green;
-      text-decoration-color: green;
+    .hero-text p {
+      margin: 0.5rem 0 0;
+      font-size: 1.2rem;
+    }
+
+    /* News Section */
+    .news-section {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 2rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 4rem;
+      justify-content: center;
+    }
+
+    .news-card {
+      width: 300px;
+      height: 400px;
+      perspective: 2000px;
+    }
+
+    .news-card-inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjust shadow here */
+   } 
+
+
+    .news-card:hover .news-card-inner {
+      transform: rotateY(180deg);
+    }
+
+    .news-card-front, .news-card-back {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      backface-visibility: hidden;
+      border-radius: 10px;
+    }
+
+    .news-card-front {
+      background: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: 1.5rem;
+      padding: 1rem;
+    }
+
+    .news-card-back {
+      background: linear-gradient(135deg, #009921, #00ff2a);
+      transform: rotateY(180deg);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: 1.2rem;
+      padding: 1rem;
+      text-align: center;
+    }
+
+
+    /* Options Menu */
+    .options-container {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(5px);
+      z-index: 1100;
+      justify-content: center;
+      align-items: center;
+      transition: opacity 0.3s ease;
+    }
+
+    .options-content {
+      background: #1a1a1a;
+      padding: 2rem;
+      border-radius: 10px;
+      position: relative;
+      width: 80%;
+      max-width: 600px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .options-close {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
       cursor: pointer;
+      color: #fff;
+      font-size: 1.5rem;
+      transition: color 0.3s ease;
+    }
+
+    .options-close:hover {
+      color: #00ff2a;
+    }
+
+    .options-buttons {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .options-buttons a {
+      text-decoration: none;
+      color: #fff;
+      background: #00ff2a;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      display: inline-block;
+      text-align: center;
+      transition: background 0.3s ease;
+    }
+
+    .options-buttons a:hover {
+      background: #009921;
+    }
+
+    /* Cookie Notification */
+    .cookie-notification {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+      display: none;
+      z-index: 1200;
+    }
+
+    .cookie-notification button {
+      background: #2bff00;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      color: #fff;
+      cursor: pointer;
+      margin: 0 0.5rem;
+      transition: background 0.3s ease;
+    }
+
+    .cookie-notification button:hover {
+      background: #12974a;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .hero-text h2 {
+        font-size: 2rem;
+      }
+
+      .hero-text p {
+        font-size: 1rem;
+      }
+
+      .news-section {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
+</head>
+<body>
+  <nav>
+    <div class="container">
+      <h1>EgeSuperMine</h1>
+      <div>
+        <a href="index.html" class="active">Home</a>
+        <a href="pages/about.html">About</a>
+        <a href="pages/projects.html">Projects</a>
+        <a href="#" id="options-link">Options</a>
+      </div>
+    </div>
+  </nav>
 
-  <body>
-    <h1>EgeSuperMine</h1>
-    <h2>Oh hey there! I'm some random turkish C# Developer that's trying to make a game without a game engine! 
-      (I use Visual Studio WPF to make games.)</h2>
-    <h2>By the way, i'm the creator of EgeSuperMine the Cube or EgeSuperCube for short.</h2>
-    <div></div>
-    <h3>Here are stuff i've made:</h3>
-    <a href="https://GitHub.com/EgeSuperMine/Raise_an_EgeSuperMine" target="_blank">
-      <h2>Raise an EgeSuperMine (BETA 1.1.1)</h2>
-    </a>
+  <div class="hero">
+    <div class="hero-text">
+      <h2>Welcome to EgeSuperMine's Website!</h2>
+      <p>This is the home page. Use the navigation tabs to explore more.</p>
+    </div>
+  </div>
 
-    <a href="https://GitHub.com/EgeSuperMine/Pet-EgeSuperMine" target="_blank">
-      <h2>Pet EgeSuperMine (1.7)</h2>
-    </a>
+  <div class="news-section">
+    <div class="news-card" data-url="newsdetails/0.html">
+      <div class="news-card-inner">
+        <div class="news-card-front">
+          <h3>Website Revamp Announcement</h3>
+        </div>
+        <div class="news-card-back">
+          <p>Exciting new features and a complete redesign. Click to read more!</p>
+        </div>
+      </div>
+    </div>
+    <div class="news-card" data-url="https://example.com/news2">
+      <div class="news-card-inner">
+        <div class="news-card-front">
+          <h3>Egesupermine cool</h3>
+        </div>
+        <div class="news-card-back">
+          <p>idk if i can whitelist https://example.com/news2</p>
+        </div>
+      </div>
+    </div>
+     <!-- More News Cards -->
+    <div class="news-card" data-url="">
+      <div class="news-card-inner">
+        <div class="news-card-front">
+          <h3>This card has no link</h3>
+        </div>
+        <div class="news-card-back">
+          <p>no 🧢</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <a href="https://GitHub.com/EgeSuperMine/EgeSupX" target="_blank">
-      <h2>EgeSupX (1.1.2)</h2>
-    </a>
+  <footer>
+    <p>&copy; 2024 EgeSuperMine. All rights reserved.</p>
+  </footer>
 
-    <a href="https://GitHub.com/EgeSuperMine/ESMs_RPG" target="_blank">
-      <h2>EgeSuperMine's RPG (In Development)</h2>
-    </a>
-  
-    <img
-src="https://raw.githubusercontent.com/EgeSuperMine/Raise_an_EgeSuperMine.Discord/main/EgeSuperMine1024x_.png"
-    width="512" height="512">
+  <!-- Options Menu -->
+  <div class="options-container" id="options-menu">
+    <div class="options-content">
+      <span class="options-close" id="options-close">&times;</span>
+      <h2>Options</h2>
+      <div class="options-buttons">
+        <a href="#social">Button1</a>
+        <a href="#credits">Button2</a>
+        <a href="#button1">Button3</a>
+        <a href="#button2">Button4</a>
+      </div>
+    </div>
+  </div>
 
-    <footer>
-      <h>&copy; 2024 EgeSuperMine</h>
-    </footer>
-  </body>
+  <!-- Cookie Notification -->
+  <div class="cookie-notification" id="cookie-notification">
+    <p>We use cookies to improve your experience. By continuing to visit this site you agree to our use of cookies.</p>
+    <button id="cookie-accept">Accept</button>
+    <button id="cookie-decline">Decline</button>
+  </div>
+
+  <script>
+    // JavaScript for Options Menu
+    const optionsLink = document.getElementById('options-link');
+    const optionsMenu = document.getElementById('options-menu');
+    const optionsClose = document.getElementById('options-close');
+
+    optionsLink.addEventListener('click', (e) => {
+      e.preventDefault();
+      optionsMenu.style.display = 'flex';
+      setTimeout(() => optionsMenu.style.opacity = '1', 10); // For transition effect
+    });
+
+    optionsClose.addEventListener('click', () => {
+      optionsMenu.style.opacity = '0';
+      setTimeout(() => optionsMenu.style.display = 'none', 300); // Matches transition time
+    });
+
+    // JavaScript for News Cards
+    document.querySelectorAll('.news-card').forEach(card => {
+      card.addEventListener('click', () => {
+        const url = card.getAttribute('data-url');
+        if (url) {
+          window.location.href = url;
+        }
+      });
+    });
+
+    // Cookie Notification
+    const cookieNotification = document.getElementById('cookie-notification');
+    const cookieAccept = document.getElementById('cookie-accept');
+    const cookieDecline = document.getElementById('cookie-decline');
+
+    if (!localStorage.getItem('cookiesAccepted')) {
+      cookieNotification.style.display = 'block';
+    }
+
+    cookieAccept.addEventListener('click', () => {
+      localStorage.setItem('cookiesAccepted', 'true');
+      cookieNotification.style.display = 'none';
+    });
+
+    cookieDecline.addEventListener('click', () => {
+      localStorage.setItem('cookiesAccepted', 'false');
+      cookieNotification.style.display = 'none';
+    });
+  </script>
+</body>
 </html>
+
+
