--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EgeSuperMine</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     /* Global Styles */
     body {
@@ -17,7 +17,7 @@
 
     /* Hero Section */
     .hero {
-      background: url('images/your-image.png') no-repeat center center/cover;
+      background: url('your-image.png') no-repeat center center/cover;
       height: 60vh;
       display: flex;
       justify-content: center;
@@ -220,8 +220,8 @@
       <h1>EgeSuperMine</h1>
       <div>
         <a href="index.html" class="active">Home</a>
-        <a href="pages/about.html">About</a>
-        <a href="pages/projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="#" id="options-link">Options</a>
       </div>
     </div>
@@ -235,7 +235,7 @@
   </div>
 
   <div class="news-section">
-    <div class="news-card" data-url="newsdetails/0.html">
+    <div class="news-card" data-url="0.html">
       <div class="news-card-inner">
         <div class="news-card-front">
           <h3>Website Revamp Announcement</h3>
