--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
         </div>
       </div>
     </div>
-    <div class="news-card" data-url="https://example.com/news2">
+    <div class="news-card" data-url="">
       <div class="news-card-inner">
         <div class="news-card-front">
-          <h3>Egesupermine cool</h3>
+          <h3></h3>
         </div>
         <div class="news-card-back">
-          <p>idk if i can whitelist https://example.com/news2</p>
+          <p></p>
         </div>
       </div>
     </div>
