--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 
     /* Hero Section */
 .hero {
-  background: url('../images/your-image.png') no-repeat center center/cover;
+  background: url('../your-image.png') no-repeat center center/cover;
   height: 40vh;
   display: flex;
   justify-content: center;
@@ -205,7 +205,7 @@
     <div class="container">
       <h1>EgeSuperMine</h1>
       <div>
-        <a href="../index.html">Home</a>
+        <a href="../">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html" class="active">Projects</a>
       </div>
