--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 
     /* Hero Section */
 .hero {
-  background: url('../your-image.png') no-repeat center center/cover;
+  background: url('your-image.png') no-repeat center center/cover;
   height: 40vh;
   display: flex;
   justify-content: center;
