--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About - EgeSuperMine</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
   color: #f5f5f5;
   background-color: #1a1a1a; /* Fallback color if the image fails to load */
-  background-image: url('../images/egebutermmmidk.png'); /* URL to your background image */
+  background-image: url('egebutermmmidk.png'); /* URL to your background image */
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating of the image */
@@ -63,7 +63,7 @@ body {
 
   <div class="content">
     <h2>About Me</h2>
-    <p>Hello! I'm a Turkish C# Developer with a passion for creating games without relying on traditional game engines. I leverage Visual Studio WPF to craft unique gaming experiences from scratch.</p>
+    <p>Hi! I'm a Turkish C# Developer with a passion for creating games without relying on traditional game engines. I leverage Visual Studio WPF to craft unique gaming experiences from scratch.</p>
     <p>I'm also the creator of <strong>EgeSuperCube</strong>, a game that combines creativity and programming in exciting ways.</p>
     <p>Feel free to explore my work and see what I've been up to!</p>
   </div>
