--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   </div>
 
   <div class="news-section">
-    <div class="news-card" data-url="0.html">
+    <div class="news-card" data-url="revamp150724.html">
       <div class="news-card-inner">
         <div class="news-card-front">
           <h3>Website Revamp Announcement</h3>
@@ -259,10 +259,10 @@
     <div class="news-card" data-url="">
       <div class="news-card-inner">
         <div class="news-card-front">
-          <h3>This card has no link</h3>
+          <h3></h3>
         </div>
         <div class="news-card-back">
-          <p>no 🧢</p>
+          <p></p>
         </div>
       </div>
     </div>
