--- a/projects.html
+++ b/projects.html
@@ -226,7 +226,7 @@
 
     <div id="projectsContainer">
       <div class="project">
-        <img src="https://via.placeholder.com/1200x600" alt="Project 1">
+        <img src="RaEss.png" alt="Raise an EgeSuperMine">
         <div class="project-content">
           <h3>Raise an EgeSuperMine</h3>
           <p>BETA 1.1.1 - Explore this exciting new game where you can raise and manage your own EgeSuperMine. Engage in various activities and enjoy the immersive gameplay.</p>
