--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ body {
     <div class="container">
       <h1>EgeSuperMine</h1>
       <div>
-        <a href="../index.html">Home</a>
+        <a href="../Website/index.html">Home</a>
         <a href="about.html" class="active">About</a>
         <a href="projects.html">Projects</a>
       </div>
