--- a/projects.html
+++ b/projects.html
@@ -247,7 +247,7 @@
         <img src="https://via.placeholder.com/1200x600" alt="Project 3">
         <div class="project-content">
           <h3>EgeSupX</h3>
-          <p>1.1.2 - A cutting-edge project with innovative features and a dynamic interface. Perfect for those looking for a new experience.</p>
+          <p>1.1.2 - A Framework built for C# WPF.</p>
           <a href="https://github.com/EgeSuperMine/EgeSupX" target="_blank">Learn More</a>
         </div>
       </div>
@@ -256,7 +256,7 @@
         <img src="https://via.placeholder.com/1200x600" alt="Project 4">
         <div class="project-content">
           <h3>EgeSuperMine's RPG</h3>
-          <p>In Development - Dive into our RPG game currently under development. Stay tuned for updates and new features!</p>
+          <p>In Development - Dive into our RPG game that is currently under development. Stay tuned for updates and new features!</p>
           <a href="https://github.com/EgeSuperMine/ESMs_RPG" target="_blank">Learn More</a>
         </div>
       </div>
